sum make calendar blocked

--- a/public/stylesheets/parts/_table.css
+++ b/public/stylesheets/parts/_table.css
@@ -138,6 +138,7 @@ div.confirm-close-session-week {
   letter-spacing: 1px;
   font-size: 16px;
   line-height: 120%;
+  z-index: 1;
 }
 
 div.confirm-close-session.active {
