--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,8 +19,8 @@ html
           a(href="/panel/table")  E-Tablica  
         li 
            a(href="/panel/necessary") Przydatne 
-        li 
-          a(href="/panel/calendar")  Kalendarz  
+        //- li 
+        //-   a(href="/panel/calendar")  Kalendarz  
         //-   a(class='disabled')  Aktualności      
                  
         
