--- a/views/table.pug
+++ b/views/table.pug
@@ -42,17 +42,20 @@ block content
           th Imię i nazwisko
           th
             i(class="fas fa-handshake")
+          th ŚR.
           th
             i(class="fas fa-coins")  (Netto)
         each item in dataModWeek
           tr
             td=item.name
             td=item.pointsWeek
+            td=(item.pointsWeek/item.days).toFixed(1)
             td=Math.round(item.pointsWeek * 7)
         tr
           td SUMA:
           td=allScoreWeek
           td 
+          td
             button(id="close-session-btn-week" class="btn btn-danger") Zamknij sesję              
     div(class='table-month table table-hover table-dark')
       h2 Tabela miesięczna
@@ -70,8 +73,7 @@ block content
             td=Math.round(item.pointsMonth * 7)
         tr
           td SUMA:
-          td=allScoreMonth
-          TD
+          td=allScoreMonth          
   script(src="/javascripts/table.js")
   script(src="/javascripts/christmas.js")
   script(src="/javascripts/snow.js") 
