new year count update

--- a/views/table.pug
+++ b/views/table.pug
@@ -5,7 +5,7 @@ block content
     button(type='submit' class='logout-btn') Wyloguj
   h1(class='table-heading') E-Tablica 
   div(class="christmas-time")
-    p(class="time-to") Święta za:
+    p(class="time-to") Nowy rok za:
       span(class="days-christmas")
       span(class="hours-christmas")
       span(class="minutes-christmas")
