new year hat added

--- a/views/table.pug
+++ b/views/table.pug
@@ -13,9 +13,10 @@ block content
   
     each item in dataModDay     
       div(data-position=`${position++}` class=`${item.points > 0 && position == 0 ? "person winner" : "person"}`)
-        img(data-position=`${position++}` src="/images/santa-hat.png" class=`${item.points > 0 && position == 1 ? "crown" : "crown disabled"}`)
+        img(data-position=`${position++}` src="/images/party-hat.png" class=`${item.points > 0 && position == 1 ? "crown" : "crown disabled"}`)
         span(class="points")=item.points
-        p(class="name")=item.name
+        p(class="name")=item.name      
+
         div(class="pointsPanel")          
          a(href=`/panel/table/add/${item.id}/${item.points}` class="plus" data-operation="plus" data-id=item.id) +
          a(href=`/panel/table/minus/${item.id}/${item.points}` class="minus" data-operation="minus" data-id=item.id) -         
