--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -42,5 +42,6 @@ body {
     @import './parts/experts';
     @import './parts/table';
     @import './parts/necessary';
+    @import './parts/news';
 
 }
