--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -626,8 +626,15 @@ body div.news-wrapper .post {
 
 body div.news-wrapper .post .post-target {
   font-weight: bolder;
-  background: linear-gradient(90deg, #0072ff 0%, #00d4ff 100%);
+  background: rgba(0, 0, 0, 0.82);
   color: white;
+  padding: 4px;
+}
+
+body div.news-wrapper .post .time-par {
+  text-align: right;
+  color: #9a8a8a;
+  font-size: 0.8em;
 }
 
 body div.news-wrapper .post-news {
