auto refresh fix

--- a/views/news.pug
+++ b/views/news.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+  meta(http-equiv="refresh" content="120")
   link(href="https://fonts.googleapis.com/css?family=Work+Sans:400,700&display=swap&subset=latin-ext" rel="stylesheet")
   form(method='post')
     button(type='submit' class='logout-btn') Wyloguj
