--- a/views/table.pug
+++ b/views/table.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+  meta(http-equiv="refresh" content="120")
   form(method='post')
     button(type='submit' class='logout-btn') Wyloguj
   h1(class='table-heading') E-Tablica 
