--- a/views/table.pug
+++ b/views/table.pug
@@ -18,9 +18,22 @@ block content
         span(class="points")=item.points
         p(class="name")=item.name      
 
-        div(class="pointsPanel")          
+        div(class="pointsPanel")   
+         span(class="profile" id=item.name)
+           i(class="fas fa-user-alt")       
          a(href=`/panel/table/add/${item.id}/${item.points}` class="plus" data-operation="plus" data-id=item.id) +
-         a(href=`/panel/table/minus/${item.id}/${item.points}` class="minus" data-operation="minus" data-id=item.id) -         
+         a(href=`/panel/table/minus/${item.id}/${item.points}` class="minus" data-operation="minus" data-id=item.id) -  
+         div(class=`profile-cont ${item.name}`)
+           i(class="fas fa-window-close close-profile")
+           h2(class="name")
+             i(class="far fa-star")
+             span=item.name
+             i(class="far fa-star")
+           p(class="profile-par")=`W tym tygodniu: ${item.pointsWeek}`
+           p(class="profile-par")=`W tym miesiącu: ${item.pointsMonth}`
+           p(class="profile-par profile-all-points")=`WSZYSTKIE: ${item.allPoints}`
+           p(class="profile-par alert alert-success") Wyślij mi na maila liczby z poprzednich miesięcy!
+
     div(class="sum")
       p(class="score-number")=`Suma: ${allScore}`   
     button(id="close-session-btn" class="close-session btn btn-danger") Zamknij sesję
