--- a/views/table.pug
+++ b/views/table.pug
@@ -19,11 +19,11 @@ block content
         p(class="name")=item.name      
 
         div(class="pointsPanel")   
-         span(class="profile" id=item.name)
+         span(class="profile" id=`id${item.id}`)
            i(class="fas fa-user-alt")       
          a(href=`/panel/table/add/${item.id}/${item.points}` class="plus" data-operation="plus" data-id=item.id) +
          a(href=`/panel/table/minus/${item.id}/${item.points}` class="minus" data-operation="minus" data-id=item.id) -  
-         div(class=`profile-cont ${item.name}`)
+         div(class=`profile-cont id${item.id}`)
            i(class="fas fa-window-close close-profile")
            h2(class="name")
              i(class="far fa-star")
