--- a/public/stylesheets/parts/_table.scss
+++ b/public/stylesheets/parts/_table.scss
@@ -102,18 +102,18 @@ div.pointsPanel {
 }
 
 img.crown {
-    // width: 80px;
-    // position: absolute;
-    // transform: rotateZ(-17deg);
-    // z-index: 1;
-    // left: -26px;
-    // top: -33px;
-    width: 60px;
+    width: 80px;
     position: absolute;
-    transform: rotateZ(-6deg);
+    transform: rotateZ(-17deg);
     z-index: 1;
-    left: -24px;
-    top: -22px;
+    left: -26px;
+    top: -33px;
+    // width: 60px;
+    // position: absolute;
+    // transform: rotateZ(-6deg);
+    // z-index: 1;
+    // left: -24px;
+    // top: -22px;
 }
 
 img.crown.disabled {
@@ -271,6 +271,7 @@ span.profile {
         top: 5px;
         right: 5px;
         cursor: pointer;
+        color: rgb(60, 89, 152);
 
     }
 
