session week adding points to all

--- a/views/table.pug
+++ b/views/table.pug
@@ -43,7 +43,7 @@ block content
         button(class="btn btn-success" type="submit") Potwierdzam       
       button(class="close-session no btn btn-danger") Innym razem
     div(class="confirm-close-session-week")
-      p Czy jesteś pewna/-y, że chcesz zamknąć sesję tygodniową? Spowoduje to wyzerowanie wyników na tablicy tygodniowej.
+      p Czy jesteś pewna/-y, że chcesz zamknąć sesję tygodniową? Spowoduje to wyzerowanie wyników na tablicy tygodniowej i dodanie ich do "Wszystkie" w profilu.
       form(action="table/close-session-week/")
         button(class="btn btn-success" type="submit") Potwierdzam 
       button(class="close-session-week no btn btn-danger") Innym razem
