--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -43,5 +43,6 @@ body {
     @import './parts/table';
     @import './parts/necessary';
     @import './parts/news';
+    @import './parts/church';
 
 }
