--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -733,3 +733,37 @@ body .church-desc span {
   display: block;
   font-weight: bolder;
 }
+
+body .church-wrap {
+  margin: 20px auto;
+  background: rgba(29, 29, 29, 0.79);
+  width: 90%;
+  border-radius: 5px;
+  min-height: 200px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+body .church-wrap .church-todo,
+body .church-wrap .church-order {
+  width: 400px;
+  text-align: center;
+}
+
+body .church-wrap .target-ok {
+  margin-right: 5px;
+}
+
+body .church-wrap .rmv-target {
+  color: #c15f5f;
+}
+
+body .church-wrap .btn-posting {
+  margin-bottom: 10px;
+}
+
+body .church-wrap .btn-cancel-post {
+  cursor: pointer;
+}
