--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,10 +18,12 @@ html
         li 
           a(href="/panel/table")  E-Tablica  
         li 
+           a(href="/panel/church") E-taca
+        li 
            a(href="/panel/necessary") Przydatne 
         li 
           a(href="/panel/news")  Aktualności 
-        //-   a(class='disabled')  Aktualności      
+           
                  
         
        
