--- a/public/stylesheets/parts/_church.scss
+++ b/public/stylesheets/parts/_church.scss
@@ -40,7 +40,12 @@
         margin-bottom: 10px;
     }
 
-    .btn-cancel-post {
+    .btn-cheat {
         cursor: pointer;
+    }
+
+    .cheat {
+        font-size: 20px;
+        display: none;
     }
 }
