--- a/views/church.pug
+++ b/views/church.pug
@@ -2,6 +2,8 @@ extends layout
 //- data dostarczona z modelu church
 block content
   link(href="https://fonts.googleapis.com/css?family=Work+Sans:400,700&display=swap&subset=latin-ext" rel="stylesheet")
+  form(method='post')
+    button(type='submit' class='logout-btn') Wyloguj
   h1(class="table-heading") E-Taca
   p(class="church-desc alert alert-success") Ojciec Patryk bardzo chętnie dostarczy Ci bazę, jednak wymaga to pewnego datku na e-tacę. Wpisz proszę jaki powiat Cię interesuje a także napisz swoje imię - o anonimowy darczyńco.
     span  Ojciec Patryk bierze co łaska, ale nie mniej niż 500zł - płatność kartą.
@@ -26,6 +28,9 @@ block content
         p
           input(class="btn btn-success btn-posting" type='submit' value='Zapłać kartą')  
           br
-          span(class="btn btn-danger btn-cancel-post") Spróbuj oszukać Ojca Patryka    
+          span(class="btn btn-danger btn-cheat") Spróbuj oszukać Ojca Patryka  
+    .cheat
+      p A napisane jest w piśmie, że komu dać datek trudno, to zamiast bazy otrzyma dziś - 
+        i(class="fas fa-poo") 
   script(src="/javascripts/snow.js")     
   script(src="/javascripts/church.js")    
