fix church background change

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,7 +18,7 @@ html
         li 
           a(href="/panel/table")  E-Tablica  
         li 
-           a(href="/panel/church") E-taca
+           a(href="/panel/church") E-Taca
         li 
            a(href="/panel/necessary") Przydatne 
         li 
