--- a/public/stylesheets/parts/_church.scss
+++ b/public/stylesheets/parts/_church.scss
@@ -24,7 +24,7 @@
 
     .church-todo,
     .church-order {
-        width: 400px;
+        min-width: 500px;
         text-align: center;
     }
 
@@ -33,7 +33,8 @@
     }
 
     .rmv-target {
-        color: rgb(193, 95, 95);
+        color: red;
+        font-size: 20px;
     }
 
     .btn-posting {
@@ -47,5 +48,10 @@
     .cheat {
         font-size: 20px;
         display: none;
+    }
+
+    #start-task {
+        margin-right: 10px;
+        color: rgb(40, 167, 69);
     }
 }
