--- a/public/stylesheets/parts/_church.scss
+++ b/public/stylesheets/parts/_church.scss
@@ -77,3 +77,20 @@
         }
     }
 }
+
+.church-wrap.male {
+    background: rgba(29, 29, 29, 0.35);
+}
+
+.table-dark.male {
+    background-color: rgba(52, 58, 64, 0.50);
+
+}
+
+.church-desc.male {
+    background-color: rgba(212, 237, 218, 0.56);
+}
+
+.working.male {
+    background-color: rgba(0, 128, 0, 0.49019607);
+}
