--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -44,5 +44,6 @@ body {
     @import './parts/necessary';
     @import './parts/news';
     @import './parts/church';
+    @import './parts/motive';
 
 }
