--- a/public/stylesheets/parts/_login.scss
+++ b/public/stylesheets/parts/_login.scss
@@ -36,6 +36,8 @@
         }
     }
 
+
+
     .submit-btn,
     .logout-btn {
         margin-top: 50px;
@@ -55,4 +57,8 @@
     }
 
 
+}
+
+.login-wrapper.male {
+    background: rgba(255, 255, 255, 0.3);
 }
