--- a/public/stylesheets/parts/_table.css
+++ b/public/stylesheets/parts/_table.css
@@ -268,3 +268,15 @@ span.profile i:hover {
 .profile-cont .profile-all-points {
   color: #a27607;
 }
+
+.table-wrapper.male {
+  background-color: rgba(255, 255, 253, 0.18);
+}
+
+div.person.male {
+  background: rgba(255, 255, 255, 0.38);
+}
+
+div.table-dark.male {
+  background-color: rgba(52, 58, 64, 0.52);
+}
