--- a/public/stylesheets/parts/_table.scss
+++ b/public/stylesheets/parts/_table.scss
@@ -296,3 +296,15 @@ span.profile {
         color: rgb(162, 118, 7);
     }
 }
+
+.table-wrapper.male {
+    background-color: rgba(255, 255, 253, 0.18);
+}
+
+div.person.male {
+    background: rgba(255, 255, 255, 0.38);
+}
+
+div.table-dark.male {
+    background-color: rgba(52, 58, 64, 0.52);
+}
