--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,6 +23,8 @@ html
            a(href="/panel/necessary") Przydatne 
         li 
           a(href="/panel/news")  Aktualności 
+        //- li 
+        //-   a(href="/stats")  Stats
     div(class='change-motive')
       ul
         li(class="female-link") 
