--- a/public/stylesheets/parts/_nav.css
+++ b/public/stylesheets/parts/_nav.css
@@ -28,6 +28,7 @@ div.menu-mobile i.active {
   left: 50%;
   transform: translateX(-50%);
   z-index: 10;
+  min-width: 700px;
   background: rgba(154, 12, 12, 0.11);
   color: white;
 }
@@ -56,7 +57,7 @@ div.menu-mobile i.active {
   padding: 5px;
 }
 
-.main-nav ul li:nth-child(6) {
+.main-nav ul li:nth-child(7) {
   border-right: none;
 }
 
