--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -45,5 +45,6 @@ body {
     @import './parts/news';
     @import './parts/church';
     @import './parts/motive';
+    @import './parts/stats';
 
 }
